--- a/Facepunch.Steamworks/Facepunch.Steamworks.csproj
+++ b/Facepunch.Steamworks/Facepunch.Steamworks.csproj
@@ -9,6 +9,7 @@
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<Platforms>AnyCPU;x64</Platforms>
 	
   </PropertyGroup>
 
@@ -17,7 +18,17 @@
     <NoWarn>1701;1702;1705;618;1591</NoWarn>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <NoWarn>1701;1702;1705;618;1591</NoWarn>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>TRACE;RELEASE</DefineConstants>
+    <NoWarn>1701;1702;1705;618;1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <DefineConstants>TRACE;RELEASE</DefineConstants>
     <NoWarn>1701;1702;1705;618;1591</NoWarn>
   </PropertyGroup>
@@ -56,6 +67,11 @@
  </PropertyGroup>
   
  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
+   <DebugType>full</DebugType>
+   <DebugSymbols>true</DebugSymbols>
+ </PropertyGroup>
+  
+ <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|x64'">
    <DebugType>full</DebugType>
    <DebugSymbols>true</DebugSymbols>
  </PropertyGroup>
