--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ Facepunch.Steamworks/bin/Debug/Facepunch.Steamworks.Api.dll
 Facepunch.Steamworks/bin/Debug/Facepunch.Steamworks.dll
 Facepunch.Steamworks/bin/Release/Facepunch.Steamworks.dll
 Facepunch.Steamworks/bin
+bin
 *.opendb
 *.db
 Facepunch.Steamworks.dll
